--- a/src/main/webapp/WEB-INF/templates/definitions.xml
+++ b/src/main/webapp/WEB-INF/templates/definitions.xml
@@ -2,4 +2,5 @@
 <!DOCTYPE tiles-definitions PUBLIC "-//Apache Software Foundation//DTD Tiles Configuration 3.0//EN" "http://tiles.apache.org/dtds/tiles-config_3_0.dtd">
 <tiles-definitions>
     <definition name="default" template="/WEB-INF/templates/default.jsp"></definition>
+    <definition name="blank" template="/WEB-INF/templates/blank.jsp"></definition>
 </tiles-definitions>
